# schemr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  compare.rs  config.rs  main.rs  schema.rs
